------------------- Upcoming version 7.0 -----------------------------

Major features:

Features and improvements:

- Added support for recording calls to OpenCL 2.1/2.2 functions.

Bugfixes:

- Support changed BFD API. Changes introduced by binutils-2.34.

------------------- Released version 6.0 -----------------------------

Major features:

- Support for recording I/O activities: Calls to POSIX I/O and MPI-I/O
  are wrapped and meta data about individual I/O operations is
  recorded. Whereas MPI-I/O events are recorded by default, POSIX I/O
  recording needs to be activated using the instrumenter option
  --io=posix.

Features and improvements:

- Created separate enable group for request handling functions in MPI.
  MPI functions dealing with the completion of non-blocking requests
  (i.e., the Test/Wait family of calls) are no longer part of the P2P
  enable group and moved to a separate enable group, which is enabled
  or disabled automatically by the Score-P runtime system.
- Adapted remapper specification to reflect that Test/Wait functionality
  is no longer specific to point-to-point communication.
- Added support for the Clang compiler suite. Select via
  `--with-nocross-compiler-suite=clang`. Additionally experimental
  support for macOS based systems was added, but needs to be enabled
  with `--enable-experimental-platform` explicitly.
- Bulding with the PGI compiler suite now selects the 'pgfortran'
  compiler for F77 and FC. Added support for the PGI/LLVM variant.
- Added support for tracking MPI-3 one-sided communication.
- The previously unused environment variable
  `SCOREP_MPI_MAX_ACCESS_EPOCHS` was renamed to `SCOREP_MPI_MAX_EPOCHS`
  and is now used in tracking MPI one-sided communication.
- Changed the presentation of parameter-based profiling. Instead of
  nested call tree nodes under the source code region, create multiple
  nodes for the region on the same level and attach Cube-Parameters to