@@ -36,33 +36,33 @@
 !<
 
       SUBROUTINE scorep_fortran_get_mpi_status_size (status_size)
-      INCLUDE 'mpif.h'
+      USE mpi
       INTEGER status_size
       status_size = MPI_STATUS_SIZE
       END
 
       SUBROUTINE scorep_fortran_get_mpi_bottom()
-      INCLUDE  'mpif.h'
+      USE mpi
       CALL scorep_mpi_fortran_init_bottom(MPI_BOTTOM)
       END
 
       SUBROUTINE scorep_fortran_get_mpi_in_place()
-      INCLUDE  'mpif.h'
+      USE mpi
       CALL scorep_mpi_fortran_init_in_place(MPI_IN_PLACE)
       END
 
       SUBROUTINE scorep_fortran_get_mpi_status_ignore()
-      INCLUDE  'mpif.h'
+      USE mpi
       CALL scorep_mpi_fortran_init_status_ignore(MPI_STATUS_IGNORE)
       END
 
       SUBROUTINE scorep_fortran_get_mpi_statuses_ignore()
-      INCLUDE  'mpif.h'
+      USE mpi
       CALL scorep_mpi_fortran_init_statuses_ignore(MPI_STATUSES_IGNORE)
       END
 
       SUBROUTINE scorep_fortran_get_mpi_unweighted()
-      INCLUDE  'mpif.h'
+      USE mpi
       CALL scorep_mpi_fortran_init_unweighted(MPI_UNWEIGHTED)
       END
 
