@@ -2,8 +2,8 @@ PROGRAM DISTRIBUTION_TEST
 
 USE DISTRIBUTION
 
+USE MPI
 IMPLICIT NONE
-INCLUDE 'mpif.h'
 
 INTEGER :: sz, me, ierror
 DOUBLE PRECISION :: scale, temp
