@@ -1,8 +1,8 @@
 MODULE TYPE_CONVERT
 
+USE MPI
 IMPLICIT NONE
 PRIVATE
-INCLUDE 'mpif.h'
 
 PUBLIC :: CONVERT_REAL, CONVERT_DOUBLE, CONVERT_INTEGER
 
