@@ -6,6 +6,9 @@ Features and improvements:
 
 - Added support for recording calls to OpenCL 2.1/2.2 functions.
 
+- Score-P now requires an MPI implementation which provides the
+  `USE mpi` Fortran bindings, instead of the `INCLUDE 'mpif.h'`.
+
 Bugfixes:
 
 - Support changed BFD API. Changes introduced by binutils-2.34.
